samples/_failures_safe/1761004575_2b489b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd1ae99e.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_bd1ae99e.c:158:20: error: expected ‘;’ at end of input
  158 |         token->line
      |                    ^
      |                    ;
./samples/SAFE/__tmp_bd1ae99e.c:158:9: error: expected declaration or statement at end of input
  158 |         token->line
      |         ^~~~~
./samples/SAFE/__tmp_bd1ae99e.c:158:9: error: expected declaration or statement at end of input
